updated docs, improved scripts; removed test_runs.txt for now